--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,14 @@
   .text-balance {
     text-wrap: balance;
   }
+
+  .flex-center {
+    @apply flex justify-center items-center;
+  }
+
+  .flex-between {
+    @apply flex justify-between items-center;
+  }
 }
 
 
