--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
   }
 }
 
-@layer base {
+/* @layer base {
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
@@ -37,7 +37,7 @@
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
 
 .glassmorphism {
   background: rgba(255, 255, 255, 0.25);
